# stt-realtime-demo

./: CLIENT_API_GUIDE.md  QUICK_START.md  README.md  pyproject.toml  streaming_flow_explanation.md  test_deepgram.py
client/: streamlit_app.py
server/: main.py  models.py  streaming_manager.py  stt_service.py
